# giropops-senhas-fapi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/redis_db/: redis.py
app/routes/: generator_routes.py
app/static/js/: main.js
app/templates/: index.html
